--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^2.0.7
   qr_code_scanner: ^1.0.1
   network_info_plus: ^4.0.1
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
