--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,13 @@ dependencies:
   qr_code_scanner: ^1.0.1
   network_info_plus: ^4.0.1
   sizer: ^2.0.15
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "icon_notification"
+  ios: true
+  image_path: "assets/images/logo/icon_app.jpg"
+
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
