--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,19 +39,32 @@ dependencies:
   firebase_core: ^2.14.0
   get: ^4.6.5
   get_storage: ^2.1.1
-  http: ^1.1.0
-  google_fonts: ^5.1.0
+  http: ^0.13.6
+  google_fonts: ^4.0.4
   flutter_svg: ^2.0.7
   qr_code_scanner: ^1.0.1
   network_info_plus: ^4.0.1
   sizer: ^2.0.15
   flutter_launcher_icons: ^0.13.1
+  equatable: ^2.0.5
+  device_info_plus: ^9.0.2
+  dio: ^5.2.1+1
+  flutter_dotenv: ^5.1.0
+  flutter_i18n: ^0.33.0
+  shared_preferences: ^2.2.0
+  rxdart: ^0.27.7
+  flutter_secure_storage: ^8.0.0
+  photo_view: ^0.14.0
 
 flutter_icons:
   android: "icon_notification"
   ios: true
   image_path: "assets/images/logo/icon_app.jpg"
 
+
+dependency_overrides:
+  webview_flutter: ^3.0.0
+  test_api: 0.5.2
 
 dev_dependencies:
   flutter_test:
