--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.check_in">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
    <application
         android:label="SGU Connect"
         android:icon="@mipmap/icon_notification">
