--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   rxdart: ^0.27.7
   flutter_secure_storage: ^8.0.0
   photo_view: ^0.14.0
+  local_auth: ^2.1.6
 
 flutter_icons:
   android: "icon_notification"
@@ -90,6 +91,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env.dev
+    - .env.prod
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
