--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/background/
     - assets/icons/
     - .env.dev
     - .env.prod
