--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
 flutter_icons:
   android: "icon_notification"
   ios: true
-  image_path: "assets/images/logo/icon_app.jpg"
+  image_path: "assets/images/OIG.png"
 
 
 dependency_overrides:
