--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   photo_view: ^0.14.0
   local_auth: ^2.1.6
+  permission_handler: ^10.4.3
 
 flutter_icons:
   android: "icon_notification"
