--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   permission_handler: ^10.2.0
   open_file: ^3.3.2
   url_launcher: ^6.1.12
+  pdfx: ^2.4.0
+  internet_file: ^1.2.0
 
 flutter_icons:
   android: "icon_notification"
