--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,7 @@ android {
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -65,10 +66,8 @@ android {
 flutter {
     source '../..'
 }
-configurations.all {
-    exclude group: "com.google.mlkit", module:"barcode-scanning"
-}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.1.4'
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.2.0'
 }
