--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   permission_handler: ^10.2.0
   open_file: ^3.3.2
   url_launcher: ^6.1.12
-
+  fl_chart: ^0.63.0
 flutter_icons:
   android: "icon_notification"
   ios: true
