--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   image_picker: ^1.0.1
   intl: ^0.18.1
   geolocator: ^9.0.2
-
+  dropdown_search: ^5.0.6
 
 flutter_icons:
   android: "icon_notification"
